new debug config

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,4 @@ NODE_ENV=development
 PORT=1337
 DATABASE_URL=mongodb://localhost/test
 CORS_ORIGIN=http://locahost:8080
+API_KEY=<PUT YOUR PASSWORD>
