update new env variables

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=1337
-DATABASE_URL=mongodb://localhost/test
-CORS_ORIGIN=http://locahost:8080
-API_KEY=<PUT YOUR PASSWORD>
+DATABASE_URL_TEST=mongodb://localhost/test
+DATABASE_URL=mongodb+srv://<userName>:<password>@clusterName/dbName?retryWrites=true&w=majority
+CORS_ORIGIN=http://localhost:3000
+API_KEY=<API-KEY>
