--- a/server/.env.example
+++ b/server/.env.example
@@ -2,5 +2,6 @@ NODE_ENV=development
 PORT=1337
 DATABASE_URL_TEST=mongodb://localhost/test
 DATABASE_URL=mongodb+srv://<userName>:<password>@clusterName/dbName?retryWrites=true&w=majority
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=https://build.jnx86bcn.now.sh
+CORS_ORIGIN_TEST=http://localhost:3000
 API_KEY=<API-KEY>
